#1465: Added optional default value for Entity Geo Point Attributes